implemented printer and its unit test.